/*
 * $Id$
 */

2009-07-17 01:32 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * config/mkdirstempl.bkl
  * config/tmpl_hrb.bkl
  * demos/dbExplorer/GNUmakefile
  * demos/dbExplorer/makefile.bcc
  * demos/dbExplorer/makefile.gcc
  * demos/dbExplorer/makefile.vc
  * demos/helloworld/GNUmakefile
  * demos/helloworld/helloworld.bkl
  * demos/helloworld/makefile.bcc
  * demos/helloworld/makefile.gcc
  * demos/helloworld/makefile.vc
  * samples/arrbrowser/GNUmakefile
  * samples/arrbrowser/arrbrowser.bkl
  * samples/arrbrowser/makefile.bcc
  * samples/arrbrowser/makefile.gcc
  * samples/arrbrowser/makefile.vc
  * samples/auinotebook/GNUmakefile
  * samples/auinotebook/makefile.bcc
  * samples/auinotebook/makefile.gcc
  * samples/auinotebook/makefile.vc
  * samples/bitmapButton/GNUmakefile
  * samples/bitmapButton/makefile.bcc
  * samples/bitmapButton/makefile.gcc
  * samples/bitmapButton/makefile.vc
  * samples/button/GNUmakefile
  * samples/button/makefile.bcc
  * samples/button/makefile.gcc
  * samples/button/makefile.vc
  * samples/checkbox/GNUmakefile
  * samples/checkbox/makefile.bcc
  * samples/checkbox/makefile.gcc
  * samples/checkbox/makefile.vc
  * samples/choice/GNUmakefile
  * samples/choice/makefile.bcc
  * samples/choice/makefile.gcc
  * samples/choice/makefile.vc
  * samples/combobox/GNUmakefile
  * samples/combobox/makefile.bcc
  * samples/combobox/makefile.gcc
  * samples/combobox/makefile.vc
  * samples/dbbrowser/GNUmakefile
  * samples/dbbrowser/dbbrowser.bkl
  * samples/dbbrowser/makefile.bcc
  * samples/dbbrowser/makefile.gcc
  * samples/dbbrowser/makefile.vc
  * samples/gauge/GNUmakefile
  * samples/gauge/makefile.bcc
  * samples/gauge/makefile.gcc
  * samples/gauge/makefile.vc
  * samples/grid/GNUmakefile
  * samples/grid/makefile.bcc
  * samples/grid/makefile.gcc
  * samples/grid/makefile.vc
  * samples/listbook/GNUmakefile
  * samples/listbook/makefile.bcc
  * samples/listbook/makefile.gcc
  * samples/listbook/makefile.vc